--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -5,7 +5,7 @@
   flex-direction: column;  
 }
 
-.promo__text-wrapper {
+.promo__wrapper {
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
