--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -1,7 +1,7 @@
 .nav-tab {
   background-color: #F5F5F5;
   border-radius: 0 0 10px 10px;  
-  padding: 17px;
+  padding: 0 0 17px 0;
 }
 
 .nav-tab__items {
