--- a/src/blocks/body/body.css
+++ b/src/blocks/body/body.css
@@ -2,4 +2,13 @@ body {
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
+  color: #000;
+}
+
+a {
+  text-decoration: none;  
+}
+
+a:visited {
+  color: #000;
 }
