--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,6 @@
 @import url(./fonts/suisse.css);
 @import url(./blocks/body/body.css);
 @import url(./blocks/page/page.css);
+@import url(./blocks/hidden/hidden.css);
 @import url(./blocks/main-subtitle/main-subtitle.css);
 @import url(./blocks/main-subtitle/_underlined/main-subtitle_underlined.css);
