--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -2,6 +2,7 @@
   background-color: #F5F5F5;
   border-radius: 0 0 10px 10px;  
   padding: 0 0 17px 0;
+  width: 100%;
 }
 
 .nav-tab__items {
@@ -10,6 +11,7 @@
   list-style: none;  
   display: flex;
   justify-content: center;  
+  background-color: #F5F5F5;
 }
 
 .nav-tab__item {
