--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,6 +1,5 @@
 .promo {
-  width: 100%;
-  min-height: 92vh;
+  width: 100%;  
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;  
@@ -11,9 +10,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  background-color: #F5F5F5;
-  border-radius: 10px;
+  align-items: center;    
   margin: 14px;
 }
 
@@ -21,6 +18,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   flex: 1 0 auto;
   font-weight: normal;
   font-size: 29px;
@@ -29,5 +27,12 @@
   letter-spacing: -0.04em;
   padding: 0;
   margin: 0;
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  background-color: #F5F5F5;
+}
+
+.promo__text-banner span {
   width: 292px;
+  background-color: inherit;
 }
