--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -26,17 +26,18 @@
   margin-right: 14px;
 }
 
-.header__login-btn {
+.header__login-link {
   background: #3456F3;
-  border: none;
   border-radius: 3px;
+  width: 54px;
+  height: 26px;
   font-weight: 500;
   font-size: 10px;
   line-height: 16px;
-  color: #FFFFFF;
-  width: 54px;
-  height: 26px;
-  cursor: pointer;
+  color: #FFFFFF !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header__menu-btn {
