--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,5 @@
 @import url(./blocks/login/__input/login__input.css);
 @import url(./blocks/login/__submit/login__submit.css);
 @import url(./blocks/login/__footer/login__footer.css);
+@import url(./blocks/error/error.css);
+@import url(./blocks/error/_color/error_color.css);
