--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -46,3 +46,25 @@
   align-items: center;
   justify-content: center;
 }
+
+@media screen and (min-width: 768px) {
+  .techs__wrapper {
+    margin: 44px 50px 76px 50px;
+  }
+
+  .techs__paragraph {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .techs__cards {
+    grid-template-columns: repeat(4, 90px);
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .techs__card {
+    width: 90px;
+    height: 60px;
+  }
+}
