--- a/src/blocks/main-subtitle/_underlined/main-subtitle_underlined.css
+++ b/src/blocks/main-subtitle/_underlined/main-subtitle_underlined.css
@@ -3,3 +3,12 @@
   padding-bottom: 28px;
   margin-bottom: 60px;
 }
+
+@media screen and (min-width: 768px) {
+  .main-subtitle_underlined {
+    padding-bottom: 23px;
+    margin-bottom: 70px;
+    font-size: 22px;
+    line-height: 27px;
+  }
+}
