--- a/src/blocks/main-subtitle/main-subtitle.css
+++ b/src/blocks/main-subtitle/main-subtitle.css
@@ -7,3 +7,11 @@
   letter-spacing: -0.04em;
   margin: 0 0 16px 0;
 }
+
+@media screen and (min-width: 768px) {
+  .main-subtitle {
+    font-size: 20px;
+    line-height: 24px;
+    margin: 0 0 22px 0;
+  }
+}
