--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -43,3 +43,48 @@
   margin: 0;
   text-align: center;
 }
+
+@media screen and (min-width: 768px) {
+  .footer__wrapper {
+    margin: 79px 30px 20px 30px;
+  }
+
+  .footer__title {
+    font-size: 13px;
+    line-height: 16px;    
+    padding-bottom: 21px;
+    margin: 0 0 30px 0;
+    padding-bottom: 20px;
+    margin-bottom: 20px;
+  }
+
+  .footer__row {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  .footer__list {
+    display: flex;
+    margin: 0;
+  }
+
+  .footer__item {
+    margin: 0 20px 0 0;
+  }
+
+  .footer__item:last-child {
+    margin-right: 0;
+  }
+
+  .footer__link {
+    font-size: 13px;
+    line-height: 16px;
+  }
+
+  .footer__copyright {
+    font-size: 13px;
+    line-height: 16px;
+    color: #000;
+  }
+}
