--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -51,3 +51,20 @@
   background-repeat: no-repeat;
   cursor: pointer;
 }
+
+@media screen and (min-width: 768px) {
+  .header__wrapper {
+    margin: 18px 30px;
+  }
+
+  .header__register-link {
+    font-size: 12px;
+    margin-right: 30px;
+  }
+
+  .header__login-link {
+    font-size: 12px;
+    width: 76px;
+    height: 32px;
+  }
+}
