--- a/src/components/NavTab/NavTab.css
+++ b/src/components/NavTab/NavTab.css
@@ -37,3 +37,20 @@
   justify-content: center;
   align-items: center;
 }
+
+@media screen and (min-width: 768px) {
+  .nav-tab {
+    padding-bottom: 30px;
+  }
+
+  .nav-tab__item {
+    width: 96px;
+    height: 36px;
+    margin-right: 10px;
+    border-radius: 10px;
+  }
+
+  .nav-tab__link {
+    font-size: 12px;
+  }
+}
