--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -41,3 +41,19 @@
   letter-spacing: -0.04em;
   margin: 0 0 19px 0;
 }
+
+@media screen and (min-width: 768px) {  
+  .portfolio__title {
+    font-size: 18px;    
+    margin: 0 0 50px 0;
+  }
+
+  .portfolio__wrapper {
+    margin: 0 50px 90px 50px;
+  }
+
+  .portfolio__link {
+    font-size: 28px;
+    line-height: 50px;    
+  }
+}
