--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -56,3 +56,19 @@
   color: #A0A0A0;
   margin: 0;
 }
+
+@media screen and (min-width: 768px) {
+  .movies-card__img {
+    margin-bottom: 14px;
+  }
+
+  .movies-card__film-name {
+    font-size: 13px;
+    line-height: 16px;
+  }
+
+  .movies-card__film-time {
+    font-size: 11px;
+    line-height: 13px;
+  }
+}
