--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -10,3 +10,12 @@
   grid-template-columns: 1fr;
   row-gap: 34px;
 }
+
+@media screen and (min-width: 768px) {
+  .movies-card-list__wrapper {
+    margin: 70px 30px 10px 30px;
+    grid-template-columns: repeat(2, 1fr);    
+    row-gap: 30px;
+    column-gap: 30px;
+  }
+}
