--- a/src/components/MoviesMoreCards/MoviesMoreCards.css
+++ b/src/components/MoviesMoreCards/MoviesMoreCards.css
@@ -17,3 +17,9 @@
   font-size: 12px;
   line-height: 15px;
 }
+
+@media screen and (min-width: 768px) {
+  .movies-more-cards__more-button {
+    width: 320px;
+  }
+}
