--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -42,19 +42,34 @@
   cursor: pointer;
 }
 
-/* .search-form__short-meters:checked + span {
-  display: inline-block;
-  width: 36px;
-  height: 20px;
-  background: #2BE080;
-  border-radius: 20px;
-} */
+@media screen and (min-width: 768px) {
+  .search-form__wrapper {
+    margin: 80px 30px 10px 30px;
+    padding-bottom: 109px;    
+    border-bottom: 1px solid #E8E8E8;
+  }  
 
-/* .search-form__short-meters:checked + .filter-checkbox__circle-white {
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  background: #fff;
-  border-radius: 50%;
-  
-} */
+  .search-form__form {
+    flex-direction: row;
+    justify-content: space-between;
+    background: #F4F4F4;
+    border-radius: 9px;
+  }
+
+  .search-form__film-name {
+    border: none;
+    font-size: 18px;
+    line-height: 20px;
+    color: #A0A0A0;
+    padding: 25px 0 25px 28px;
+    flex: 1 0 auto;
+    margin: 0 70px 0 28px;
+    outline: none;
+    background: url(../../images/find.svg) no-repeat center left;    
+  }
+
+  .search-form__submit {
+    right: 227px;
+    top: 18px;    
+  }
+}
