--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -11,8 +11,7 @@
   flex-direction: column;
   flex: 1 0 auto;
   align-items: center;
-  justify-content: space-between;
-  height: 67vh;
+  justify-content: space-between;  
 }
 
 .profile__title {
@@ -93,4 +92,24 @@
   color: #EE3465;
   cursor: pointer;
   border: none;
+}
+
+@media screen and (min-width: 768px) {
+  .profile__wrapper {
+    margin: 236px 179px 269px 179px;
+  }
+
+  .profile__title {
+    margin-bottom: 96px;
+  }
+
+  .profile__submit {
+    font-size: 13px;
+    line-height: 16px;
+  }
+
+  .profile__exit {
+    font-size: 13px;
+    line-height: 16px;
+  }
 }
