Верстка Login, Register 768

--- a/src/blocks/login/__footer/login__footer.css
+++ b/src/blocks/login/__footer/login__footer.css
@@ -1,6 +1,7 @@
 .login__footer {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .login__footer span {
@@ -16,4 +17,16 @@
   line-height: 15px;
   text-align: left;
   color: #3456F3;
+}
+
+@media screen and (min-width: 768px) {
+  .login__footer span {
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  .login__footer a {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
