--- a/src/blocks/login/__form/login__form.css
+++ b/src/blocks/login/__form/login__form.css
@@ -1,9 +1,16 @@
 .login__form {
   width: 100%;
-  flex: 1 0 auto;
   display: flex;
   flex-direction: column;
+  flex: 1 0 auto;
   justify-content: space-between;
   align-items: center;  
   margin-bottom: 14px;
+}
+
+@media screen and (min-width: 768px) {
+  .login__form {
+    margin-bottom: 16px;
+    flex: 0 0 auto;
+  }
 }
