--- a/src/blocks/login/__logo/login__logo.css
+++ b/src/blocks/login/__logo/login__logo.css
@@ -1,3 +1,9 @@
 .login__logo {
   margin-bottom: 50px;
 }
+
+@media screen and (min-width: 768px) {
+  .login__logo {
+    margin-bottom: 40px;
+  }
+}
