--- a/src/blocks/login/__submit/login__submit.css
+++ b/src/blocks/login/__submit/login__submit.css
@@ -2,8 +2,21 @@
   background: #3456F3;
   border-radius: 3px;
   border: none;
+  font-family: Inter;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
   color: #fff;
   padding: 15px;
   width: 100%;
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .login__submit {
+    margin-top: 49px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
