--- a/src/blocks/login/__wrapper/login__wrapper.css
+++ b/src/blocks/login/__wrapper/login__wrapper.css
@@ -5,3 +5,11 @@
   flex: 1 0 auto;
   align-items: center;
 }
+
+@media screen and (min-width: 768px) {
+  .login__wrapper {
+    margin: 0 186px;
+    align-items: flex-start;
+    justify-content: center;
+  }
+}
