--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 @import url(./blocks/login/__form-line/login__form-line.css);
 @import url(./blocks/login/__label/login__label.css);
 @import url(./blocks/login/__input/login__input.css);
+@import url(./blocks/login/__divider/login__divider.css);
 @import url(./blocks/login/__submit/login__submit.css);
 @import url(./blocks/login/__footer/login__footer.css);
 @import url(./blocks/error/error.css);
