--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .not-found__wrapper {
@@ -40,4 +41,28 @@
   color: #3456F3;
   border: none;
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .not-found__title {
+    font-size: 140px;
+    line-height: 169px;
+    margin: 0 0 10px 0;
+  }  
+
+  .not-found__paragraph {
+    font-size: 16px;
+    line-height: 19px;
+  }
+
+  .not-found__footer {
+    position: absolute;
+    bottom: 22%;
+    margin: 0;
+  }
+
+  .not-found__footer button {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
