--- a/src/blocks/main-subtitle/_underlined/main-subtitle_underlined.css
+++ b/src/blocks/main-subtitle/_underlined/main-subtitle_underlined.css
@@ -12,3 +12,10 @@
     line-height: 27px;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .main-subtitle_underlined {
+    margin-bottom: 90px;
+    background-color: inherit;
+  }
+}
