--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -88,3 +88,9 @@
     color: #000;
   }
 }
+
+@media screen and (min-width: 1280px) {  
+  .footer__wrapper {
+    margin: 79px 70px 20px 70px;
+  }
+}
