--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -2,6 +2,12 @@
   background-color: #FAFAFA;
   width: 100%;
   min-height: 100vh;
-   display: flex;
+  display: flex;
   flex-direction: column;
+}
+
+@media screen and (min-width: 1280px) {
+  .main {
+    min-height: unset;
+  }
 }
