--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -68,3 +68,34 @@
     height: 60px;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .techs {
+    background-color: #F5F5F5;
+  }
+
+  .techs__wrapper {
+    margin: 100px 70px;
+    background-color: #F5F5F5;
+  }
+
+  .techs__count {
+    font-size: 50px;
+    line-height: 58px;
+    margin-bottom: 26px;
+    background-color: inherit;
+  }
+
+  .techs__paragraph {
+    font-size: 14px;
+    line-height: 20px;
+    width: 460px;
+    margin: 0 auto 100px auto;
+    background-color: inherit;
+  }
+
+  .techs__cards {
+    grid-template-columns: repeat(7, 90px);
+    background-color: inherit;
+  }
+}
