--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -69,3 +69,9 @@
     margin: 0 13px -1px 0;
   }
 }
+
+@media screen and (min-width: 1280px) {  
+  .filter-checkbox {
+    padding-left: 30px;
+  }
+}
