--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -19,3 +19,12 @@
     column-gap: 30px;
   }
 }
+
+@media screen and (min-width: 1280px) {  
+  .movies-card-list__wrapper {
+    margin: 70px 70px 10px 70px;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 20px;
+    row-gap: 38px;
+  }
+}
