Верстка Header и Navigation

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,73 +1,47 @@
 .navigation {
-  opacity: 0;
-  visibility: hidden;
-  z-index: 100;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, .5);
-  transition: opacity .3s linear, visibility .3s linear;
-}
-
-.navigation_open {
-  visibility: visible;
-  opacity: 1;
-}
-
-.navigation__main {
+  list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   flex: 1 0 auto;
-  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .navigation__wrapper {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.navigation__close {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-  margin-bottom: 100px;
+.navigation__item {
+  padding-bottom: 7px;
+  margin-bottom: 13px;
+  border-bottom: 2px solid transparent;
+  transition: border .3s linear;
 }
 
-.navigation__close button{
-  background-image: url(../../images/close.svg);
-  background-position: center;
-  width: 22px;
-  height: 22px;
-  border: none;
-  margin: 14px 14px 0 0;
-  cursor: pointer;
+.navigation__item:hover {
+  border-bottom: 2px solid #000;
+}
+
+.navigation__item_profile {
+  margin-bottom: 46px;  
+}
+
+.navigation__item_profile:hover {
+  border-bottom: 2px solid transparent;
+  transition: none;
 }
 
 .navigation__link {
   font-weight: 500;
   font-size: 18px;
-  line-height: 22px;
-  padding-bottom: 5px;
-  margin-bottom: 15px;
-  border-bottom: 2px solid transparent;
-  transition: border .3s linear;
+  line-height: 22px;  
 }
 
-.navigation__link:hover {
-  border-bottom: 2px solid #000;
-}
-
-.navigation__profile {
-  font-weight: 500;
+.navigation__link_profile {
   font-size: 14px;
   line-height: 16px;
   padding: 8px 20px;
@@ -77,27 +51,40 @@
 }
 
 @media screen and (min-width: 768px) {
+  .navigation__item {
+    margin-bottom: 17px;
+  }  
+
+  .navigation__item_profile {
+    margin-bottom: 90px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
   .navigation {
-    align-items: flex-end;
+    flex-direction: row;
   }
 
-  .navigation__main {
-    width: 520px;
+  .navigation__wrapper {
+    flex-direction: row;
+    margin-right: 50px;
   }
 
-  .navigation__close {
-    margin-bottom: 105px;
+  .navigation__link_to-main {
+    display: none;
   }
 
-  .navigation__close button {
-    margin: 22px 22px 0 0;
+  .navigation__item {
+    margin: 0 20px 0 0;
+    padding: 0;
+  }
+
+  .navigation__item:last-child {
+    margin: 0;
   }
 
   .navigation__link {
-    margin-bottom: 28px;
-  }
-
-  .navigation__profile {
-    margin-bottom: 90px;
+    font-size: 14px;
+    line-height: 18px;    
   }
 }
