--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -52,6 +52,10 @@
   cursor: pointer;
 }
 
+.header__nav {
+  display: none;
+}
+
 @media screen and (min-width: 768px) {
   .header__wrapper {
     margin: 18px 30px;
@@ -72,5 +76,13 @@
 @media screen and (min-width: 1280px) {
   .header__wrapper {
     margin: 18px 70px;
+  }
+
+  .header__menu-btn {
+    display: none;
+  }
+
+  .header__nav {
+    display: block;
   }
 }
