--- a/src/blocks/login/__wrapper/login__wrapper.css
+++ b/src/blocks/login/__wrapper/login__wrapper.css
@@ -8,7 +8,8 @@
 
 @media screen and (min-width: 768px) {
   .login__wrapper {
-    margin: 0 186px;
+    margin: 0;
+    width: 396px;
     align-items: flex-start;
     justify-content: center;
   }
