Правка по чек-листу

--- a/src/blocks/error/error.css
+++ b/src/blocks/error/error.css
@@ -1,6 +1,6 @@
 .error {
   color: #EE3465;
-  font-family: Inter;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
