--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -51,7 +51,7 @@
 }
 
 .about-project__timeline-text {
-  font-family: Suisse Intl;
+  font-family: Suisse Intl, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 11px;
@@ -77,6 +77,7 @@
 
   .about-project__column {
     margin-right: 30px;
+    width: 100%;
   }
 
   .about-project__column:last-child {
@@ -89,7 +90,7 @@
   }
 
   .about-project__timeline-text {
-    font-family: Suisse Intl;
+    font-family: Suisse Intl, Arial, Helvetica, sans-serif;
     font-size: 14px;
     line-height: 17px;
     margin: 14px 0 0 0;
