--- a/src/blocks/body/body.css
+++ b/src/blocks/body/body.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Inter;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   color: #000;
