--- a/src/blocks/login/__input/login__input.css
+++ b/src/blocks/login/__input/login__input.css
@@ -1,12 +1,21 @@
 .login__input {
-  font-family: Inter;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 13px;
   line-height: 16px;
   background-color: #F4F4F4;
-  border: none;
+  border: 1px solid transparent;
   border-radius: 8px;
   padding: 15px;
   outline: none;
+  transition: border .3s linear;
+}
+
+.login__input:hover {
+  border: 1px solid #3456F3;
+}
+
+.login__input:focus {
+  border: 1px solid #3456F3;
 }
