--- a/src/blocks/login/__label/login__label.css
+++ b/src/blocks/login/__label/login__label.css
@@ -1,9 +1,10 @@
 .login__label {
-  font-family: Inter;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
   color: #A0A0A0;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
+  width: fit-content;
 }
