--- a/src/blocks/login/__submit/login__submit.css
+++ b/src/blocks/login/__submit/login__submit.css
@@ -2,7 +2,7 @@
   background: #3456F3;
   border-radius: 3px;
   border: none;
-  font-family: Inter;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
