--- a/src/blocks/main-subtitle/main-subtitle.css
+++ b/src/blocks/main-subtitle/main-subtitle.css
@@ -1,5 +1,5 @@
 .main-subtitle {
-  font-family: Inter;
+  font-family: Inter, Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
